# ChangeLog for media-libs/libcddb
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/ChangeLog,v 1.58 2010/01/15 09:28:07 fauli Exp $

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org> libcddb-1.3.2.ebuild:
  Transfer Prefix keywords

  25 Jun 2009; Raúl Porcel <armin76@gentoo.org> libcddb-1.3.2.ebuild:
  arm/ia64/sh/sparc stable wrt #272838

  19 Jun 2009; Brent Baude <ranger@gentoo.org> libcddb-1.3.2.ebuild:
  stable ppc64, bug 272838

  16 Jun 2009; Tobias Klausmann <klausman@gentoo.org> libcddb-1.3.2.ebuild:
  Stable on alpha, bug #272838

  10 Jun 2009; Markus Meier <maekke@gentoo.org> libcddb-1.3.2.ebuild:
  amd64/x86 stable, bug #272838

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> libcddb-1.3.2.ebuild:
  Stable for HPPA (bug #272838).

  07 Jun 2009; nixnut <nixnut@gentoo.org> libcddb-1.3.2.ebuild:
  ppc stable #272838

  04 May 2009; Samuli Suominen <ssuominen@gentoo.org> libcddb-1.3.2.ebuild:
  Remove USE iconv wrt #268048, not everything deserves a USE flag

  04 May 2009; Alexis Ballier <aballier@gentoo.org> libcddb-1.3.2.ebuild:
  Run elibtoolize for FreeBSD

*libcddb-1.3.2 (26 Apr 2009)

  26 Apr 2009; Patrick Lauer <patrick@gentoo.org> +libcddb-1.3.2.ebuild:
  Bump to 1.3.2, fixes #266915

  11 May 2008; Diego Pettenò <flameeyes@gentoo.org>
  libcddb-1.3.0-r1.ebuild:
  Move doxygen to depend-only, closes bug #221675.

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> libcddb-1.3.0-r1.ebuild:
  Stable for HPPA (bug #214767).

  27 Mar 2008; Raúl Porcel <armin76@gentoo.org> libcddb-1.3.0-r1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #214767

  26 Mar 2008; Markus Rothe <corsair@gentoo.org> libcddb-1.3.0-r1.ebuild:
  Stable on ppc64; bug #214767

  26 Mar 2008; Brent Baude <ranger@gentoo.org> libcddb-1.3.0-r1.ebuild:
  stable ppc, bug 214767

  22 Mar 2008; Samuli Suominen <ssuominen@gentoo.org> libcddb-1.3.0-r1.ebuild:
  amd64 stable

*libcddb-1.3.0-r1 (13 Nov 2007)
