@@ -5,13 +5,17 @@ AUX libcddb-1.3.0-asneeded-nonglibc.patch 469 RMD160 0f3bc365e3b3cbf4578eab8a19f
 DIST libcddb-1.3.0.tar.bz2 329319 RMD160 d34588f416ba80ececb23ffcff3312fc0b699f30 SHA1 171618045dfa75075c6ced446d25e88f2c7ca88a SHA256 4e7d3aae339cf5037d972cd5f3ab23a3b643f6b05e4125430da4f22682770bf9
 DIST libcddb-1.3.2.tar.bz2 352909 RMD160 e38ed8c7dd5a9b4a5b2a1772a9e98f914872c397 SHA1 2a7855918689692ff5ca3316d078a859d51959ce SHA256 35ce0ee1741ea38def304ddfe84a958901413aa829698357f0bee5bb8f0a223b
 EBUILD libcddb-1.3.0-r1.ebuild 1076 RMD160 3ca7561cb4550d4a3b5d0c63c9e01ca1b4fb3117 SHA1 f9613ee17a07a7d1a5aca91ab07ba3be0de9c3c0 SHA256 c87b7992385240ee281f6142b2655c733e06080de00bd7e23b81fc3614e275ce
-EBUILD libcddb-1.3.2.ebuild 1138 RMD160 7d37344b18a571727bcdd091017578ad6b687725 SHA1 621087a943cf1eff298eee7bf1225878cc142684 SHA256 838f2ba747c670ea706aff4edabc244094e18bbe2b60ec7e742a2dd31fbb6d25
-MISC ChangeLog 6541 RMD160 1195f9faf4a14cb675099a595bba3ab369fa6935 SHA1 fd91130ecaa913e63540e09ed8145a4208c31e15 SHA256 1164609764d2619707ec46f5809776a1d438a4bee46355f4038b9d0b78d2bab5
+EBUILD libcddb-1.3.2.ebuild 1051 RMD160 c1f6e80f814b4c9da23746cf6c66bd90296533ec SHA1 14ed1724c468588117798335c47bc2ce6d282c22 SHA256 04ccc8f92da25a8c15ef51cc282f12214e1af1562486d35df6978c4105885be5
+MISC ChangeLog 6750 RMD160 fbd6905e372ab6ed0aba885da4c5d34cc660007a SHA1 fff5d08d7b6992174de3870d3edea736e8b4041c SHA256 71454a33419abbcda2d37da1291b6c9671dc312a8d35ba8b0e8e2844d4ccbac5
 MISC metadata.xml 159 RMD160 568344dc99ebe68c2e2d43d268d186757532144d SHA1 3f9589301dbaa4363c56de0f309cf792d8c38b63 SHA256 eb5b8cfa9aed067cd72d6439beac2dd0abdba30248f27e4b337012b493a18369
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAktQNSgACgkQNQqtfCuFnePhVACfZqTemNaJwWUgmN8jX84P2tbq
-YeAAoJCwZUnceDWxeEEVZONN63lxrBP9
-=2MTQ
+iQEcBAEBAgAGBQJPUJlcAAoJEEdUh39IaPFNIsUH/12J+GOJTfCWmWnG4fWpisoF
+Zh0pbjVIibN5oKp1I+3jCg0MpNrTVq01EM1WgHAVQ2HrcZWhMZ1Ot1OEqAsQxgv8
+peTOKsX7vfZReswge4BWzRigfNJ06OIOW3uW4KpPo8MGwze22FfyqNspb6CPQSUX
+WKp1xfH1WW9Pv834gUK11w+ckPi4z4kDYxv/ugWH9Z3tRmMSNSejb9/0k18Xnnu4
+3v++9/NoQ7V340ZdKxCOCONxQd5TFz5Yempccg4lc2l63GDfG3w8mGxlX5F3jl+p
+QV3qeTuy4KauIBteqmQkgzE9HFCBKMXHl1PtQE4M8iYwHMhu73TaApJNm4pZ3rs=
+=14y0
 -----END PGP SIGNATURE-----
