@@ -1,47 +1,49 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/libcddb-1.3.2.ebuild,v 1.10 2010/01/15 09:28:07 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/libcddb-1.3.2.ebuild,v 1.11 2012/03/02 09:57:30 ssuominen Exp $
 
-EAPI=2
+EAPI=4
 inherit libtool
 
 DESCRIPTION="A library for accessing a CDDB server"
-HOMEPAGE="http://libcddb.sourceforge.net"
+HOMEPAGE="http://libcddb.sourceforge.net/"
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 
 LICENSE="LGPL-2"
 SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sh sparc x86 ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~x86-solaris"
-IUSE="doc"
+IUSE="doc static-libs"
 
 RDEPEND="virtual/libiconv"
 DEPEND="doc? ( app-doc/doxygen )"
 
 RESTRICT="test"
 
+DOCS="AUTHORS ChangeLog NEWS README THANKS TODO"
+
 src_prepare() {
-	# needed for sane .so versionning on FreeBSD
-	elibtoolize
+	elibtoolize # Sanitizing .so version for FreeBSD
 }
 
 src_configure() {
-	econf --without-cdio
+	econf \
+		$(use_enable static-libs static) \
+		--without-cdio
 }
 
 src_compile() {
-	emake || die "emake failed."
+	default
 
-	# Create API docs if needed and possible
 	if use doc; then
 		cd doc
-		doxygen doxygen.conf || die "doxygen failed"
+		doxygen doxygen.conf || die
 	fi
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed"
-	dodoc AUTHORS ChangeLog NEWS README THANKS TODO
+	default
 
-	# Create API docs if needed and possible
+	rm -f "${ED}"/usr/lib*/libcddb.la
+
 	use doc && dohtml doc/html/*
 }
