@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libcddb
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/ChangeLog,v 1.58 2010/01/15 09:28:07 fauli Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcddb/ChangeLog,v 1.59 2012/03/02 09:57:30 ssuominen Exp $
+
+  02 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> libcddb-1.3.2.ebuild:
+  USE="static-libs" and punt useless libcddb.la libtool archive in favour of
+  libcddb.pc pkg-config file wrt #385127 by "Hans"
 
   15 Jan 2010; Christian Faulhammer <fauli@gentoo.org> libcddb-1.3.2.ebuild:
   Transfer Prefix keywords
